--- a/webro/Base.lproj/Main.storyboard
+++ b/webro/Base.lproj/Main.storyboard
@@ -251,14 +251,31 @@
                                             <color key="textColor" red="0.53725490196078429" green="0.53725490196078429" blue="0.53725490196078429" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filtrele" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSV-xd-3ou">
+                                            <rect key="frame" x="316.5" y="13" width="40.5" height="23"/>
+                                            <fontDescription key="fontDescription" name="Catamaran-Medium" family="Catamaran" pointSize="14"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="combinedShape" translatesAutoresizingMaskIntoConstraints="NO" id="bjW-z7-FWA">
+                                            <rect key="frame" x="299.5" y="20" width="12" height="9"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="12" id="7gJ-yV-caa"/>
+                                                <constraint firstAttribute="height" constant="9" id="ifm-AH-Hl1"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="Ax4-YS-yI2" firstAttribute="leading" secondItem="eU5-67-aZs" secondAttribute="leading" id="3I3-8A-yPc"/>
+                                        <constraint firstItem="bjW-z7-FWA" firstAttribute="centerY" secondItem="BSV-xd-3ou" secondAttribute="centerY" id="FqA-iH-rwO"/>
+                                        <constraint firstItem="BSV-xd-3ou" firstAttribute="centerY" secondItem="eU5-67-aZs" secondAttribute="centerY" id="LHE-Dp-eVf"/>
                                         <constraint firstAttribute="bottom" secondItem="Ax4-YS-yI2" secondAttribute="bottom" id="N4E-nz-edv"/>
                                         <constraint firstAttribute="trailing" secondItem="Ax4-YS-yI2" secondAttribute="trailing" id="Q0g-fh-DWe"/>
+                                        <constraint firstItem="BSV-xd-3ou" firstAttribute="leading" secondItem="bjW-z7-FWA" secondAttribute="trailing" constant="5" id="REK-aR-i0R"/>
                                         <constraint firstItem="Ax4-YS-yI2" firstAttribute="top" secondItem="eU5-67-aZs" secondAttribute="top" id="SoI-zt-f7j"/>
                                         <constraint firstItem="Lgg-ud-n1Q" firstAttribute="leading" secondItem="eU5-67-aZs" secondAttribute="leading" constant="20" id="fhx-1j-Er6"/>
+                                        <constraint firstAttribute="trailing" secondItem="BSV-xd-3ou" secondAttribute="trailing" constant="18" id="jId-0M-Kne"/>
                                         <constraint firstItem="Lgg-ud-n1Q" firstAttribute="centerY" secondItem="eU5-67-aZs" secondAttribute="centerY" id="yzJ-bO-GzS"/>
                                     </constraints>
                                 </view>
@@ -453,7 +470,7 @@
                         <constraints>
                             <constraint firstItem="0J1-ee-cJ7" firstAttribute="leading" secondItem="k8d-x5-DEh" secondAttribute="leading" constant="20" id="0cR-Fx-ICX"/>
                             <constraint firstItem="F7w-Us-HCC" firstAttribute="top" secondItem="04t-Y1-l3P" secondAttribute="top" id="Q8F-OZ-a1I"/>
-                            <constraint firstItem="F7w-Us-HCC" firstAttribute="bottom" secondItem="k8d-x5-DEh" secondAttribute="bottom" id="dfc-vH-eGA"/>
+                            <constraint firstItem="F7w-Us-HCC" firstAttribute="bottom" secondItem="04t-Y1-l3P" secondAttribute="bottom" id="dfc-vH-eGA"/>
                             <constraint firstItem="0J1-ee-cJ7" firstAttribute="centerY" secondItem="k8d-x5-DEh" secondAttribute="centerY" id="fW7-16-n0m"/>
                             <constraint firstItem="F7w-Us-HCC" firstAttribute="leading" secondItem="k8d-x5-DEh" secondAttribute="leading" id="hoV-Mt-Sdh"/>
                             <constraint firstItem="k8d-x5-DEh" firstAttribute="trailing" secondItem="0J1-ee-cJ7" secondAttribute="trailing" constant="20" id="kdW-CL-rU9"/>
@@ -486,6 +503,7 @@
     </scenes>
     <resources>
         <image name="bg" width="375" height="667"/>
+        <image name="combinedShape" width="12" height="9"/>
         <image name="icPopupIcon" width="8" height="8"/>
         <image name="logo" width="132" height="52"/>
         <image name="yardimbg" width="375" height="49"/>
